--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,9 @@ version: 2
 executorType: machine
 jobs:
   build:
+    shell: /bin/bash
+    environment:
+      - BASH_ENV: ~/.bashrc
     steps:
       # Step 1: Delete virtual machines
       - run:
