--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,9 +6,9 @@ jobs:
     docker:
       - image: google/cloud-sdk
     environment:
-      PROJECT_NAME: my-app
+      PROJECT_NAME: provisioning-app
       GOOGLE_PROJECT_ID: provisioning-253609
-      GOOGLE_COMPUTE_ZONE: europe-west3-a
+      GOOGLE_COMPUTE_ZONE: us-central1-b
       GOOGLE_CLUSTER_NAME: cluster-1
     steps:
       - checkout
