--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,8 +19,17 @@ jobs:
             echo $GCLOUD_SERVICE_KEY > service_key.txt
             base64 -i service_key.txt -d > ${HOME}/gcloud-service-key.json
             gcloud auth activate-service-account --key-file=${HOME}/gcloud-service-key.json
-            gcloud --quiet config set project ${GOOGLE_PROJECT_ID}
-            gcloud --quiet config set compute/zone ${GOOGLE_COMPUTE_ZONE}
+            gcloud config set project ${GOOGLE_PROJECT_ID}
+            EXISTING_CLUSTER=$(gcloud container clusters list --format="value(name)" --filter="name=$GOOGLE_CLUSTER_NAME")
+            if [ "${EXISTING_CLUSTER}" != $GOOGLE_CLUSTER_NAME ]
+            then
+              # Create cluster if it doesn't already exist
+              gcloud --quiet container clusters create $GOOGLE_CLUSTER_NAME --num-nodes=1
+            else
+              gcloud --quiet container clusters get-credentials $GOOGLE_CLUSTER_NAME
+            fi
+            
+            gcloud config set compute/zone ${GOOGLE_COMPUTE_ZONE}
             gcloud --quiet container clusters get-credentials ${GOOGLE_CLUSTER_NAME}
       # Step 1: Delete virtual machines
       - run:
