--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,7 +37,7 @@ jobs:
           name: Delete VMs
           command: |
             echo $EXISTING_DEPLOYMENT_MANAGER
-            if [ "${CIRCLE_BRANCH}" == "master" && "${EXISTING_DEPLOYMENT_MANAGER}" == "${DEPLOYMENT_MANAGER_NAME}" ]; then
+            if [[ "${CIRCLE_BRANCH}" == "master" ]] && [[ "${EXISTING_DEPLOYMENT_MANAGER}" == "${DEPLOYMENT_MANAGER_NAME}" ]]; then
               ./delete.sh
             fi
       # Step 2: Create virtual machines
