--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,8 +36,8 @@ jobs:
       - run:
           name: Delete VMs
           command: |
-            echo "${EXISTING_DEPLOYMENT_MANAGER}"
-            if [[ "${CIRCLE_BRANCH}" == "master" ]] && [[ "${EXISTING_DEPLOYMENT_MANAGER}" == $DEPLOYMENT_MANAGER_NAME ]]; then
+            echo ${EXISTING_DEPLOYMENT_MANAGER}
+            if [[ "${EXISTING_DEPLOYMENT_MANAGER}" == $DEPLOYMENT_MANAGER_NAME ]]; then
               ./delete.sh
             fi
       # Step 2: Create virtual machines
